tests/compile-fail/integration__integration__general__local_named_after_reg.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: unexpected token `REG`
   ┌─ <input>:29:13
   │
29 │         int REG[100] = 3;
   │             ^^^ unexpected token
   │
   = 
     Expected one of "(", ";", "anim", "case", "default", "ecli", "entry", "game", "image_source", "mapfile", "script" or IDENT


